# LLM_MPC

local_planner/local_constraint_solver_plugins/: CMakeLists.txt
local_planner/local_constraint_solver_plugins/include/moveit/local_constraint_solver_plugins/: forward_trajectory.h  mpc_controller.h
local_planner/local_constraint_solver_plugins/src/: forward_trajectory.cpp  mpc_controller.cpp
local_planner/trajectory_operator_plugins/src/: simple_sampler.cpp
test/: hybrid_planning_demo_node.cpp
